initial reset password

--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -7,25 +7,26 @@
     android:orientation="vertical"
     android:layout_height="wrap_content"
     android:padding="50dp"
-    tools:context=".Login">
+    tools:context=".Forget_Password">
 
 
 
     <ImageView
-        android:id="@+id/imgLogo"
+        android:id="@+id/imgLockLogo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/applogo3d1"
-        android:layout_centerHorizontal="true"/>
+        app:srcCompat="@drawable/img_locked"
+        android:layout_centerHorizontal="true"
+        android:paddingTop="60dp"/>
 
     <TextView
         android:id="@+id/txtTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="5dp"
-        android:text="Welcome Back!"
+        android:text="We got you!"
         android:textColor="@color/black"
-        android:layout_below="@id/imgLogo"
+        android:layout_below="@id/imgLockLogo"
         tools:layout_editor_absoluteX="28dp"
         tools:layout_editor_absoluteY="59dp"
         android:layout_centerHorizontal="true"
@@ -36,7 +37,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="5dp"
-        android:text="Let’s continue the journey."
+        android:text="Don't worry! shit happens."
         android:textColor="@color/grey"
         android:layout_below="@id/txtTitle"
         tools:layout_editor_absoluteX="28dp"
@@ -51,7 +52,7 @@
         android:id="@+id/textView_Email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="5dp"
+        android:paddingTop="20dp"
         android:text="Email"
         android:textColor="@color/black"
         android:textSize="16sp"
@@ -71,76 +72,20 @@
         android:inputType="textEmailAddress"
         android:padding="10dp" />
 
-    <TextView
-        android:id="@+id/textView_email"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/editTextTextEmailAddress"
-        android:padding="5dp"
-        android:text="Password"
-        android:textColor="@color/black"
-        android:textSize="16sp" />
-
-    <EditText
-        android:id="@+id/editTextTextPassword"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/textView_email"
-        android:background="@drawable/shape_border_and_background"
-        android:ems="10"
-        android:hint="Password"
-        android:inputType="textPassword"
-        android:padding="10dp" />
-
-    <TextView
-        android:id="@+id/textView_forgotPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/editTextTextPassword"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="20dp"
-        android:text="Forgot Password?"
-
-        />
-
     <Button
         android:id="@+id/btnLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/textView_forgotPassword"
+        android:layout_below="@id/editTextTextEmailAddress"
         android:layout_centerInParent="true"
         android:layout_marginTop="20dp"
         android:padding="8dp"
-        android:text="Login"
+        android:text="Submit"
         android:textAllCaps="false"
         android:textSize="16sp"
         app:cornerRadius="15dp" />
 
-    <TextView
-        android:id="@+id/txtBreaker"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/btnLogin"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="20dp"
-        android:padding="2dp"
-        android:text="------------------------------ or ---------------------------"
-        android:textSize="16sp" />
 
-
-    <ImageButton
-
-        android:id="@+id/btn_LoginByGmail"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/txtBreaker"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="2dp"
-        android:contentDescription="Google Linking"
-        android:src="@drawable/btn_google"
-        android:textAllCaps="false"
-        android:textColor="@color/black"
-        app:backgroundTint="@color/white" />
 
 
 
