--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -7,16 +7,17 @@
     android:orientation="vertical"
     android:layout_height="wrap_content"
     android:padding="50dp"
-    tools:context=".Login">
+    tools:context=".Reset_Password">
 
 
 
     <ImageView
-        android:id="@+id/imgLogo"
+        android:id="@+id/imgUnlockLogo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/applogo3d1"
-        android:layout_centerHorizontal="true"/>
+        app:srcCompat="@drawable/img_unlocked"
+        android:layout_centerHorizontal="true"
+        android:paddingTop="60dp"/>
 
     <TextView
         android:id="@+id/txtTitle"
@@ -25,7 +26,7 @@
         android:padding="5dp"
         android:text="Welcome Back!"
         android:textColor="@color/black"
-        android:layout_below="@id/imgLogo"
+        android:layout_below="@id/imgUnlockLogo"
         tools:layout_editor_absoluteX="28dp"
         tools:layout_editor_absoluteY="59dp"
         android:layout_centerHorizontal="true"
@@ -92,22 +93,13 @@
         android:inputType="textPassword"
         android:padding="10dp" />
 
-    <TextView
-        android:id="@+id/textView_forgotPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/editTextTextPassword"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="20dp"
-        android:text="Forgot Password?"
 
-        />
 
     <Button
         android:id="@+id/btnLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/textView_forgotPassword"
+        android:layout_below="@id/editTextTextPassword"
         android:layout_centerInParent="true"
         android:layout_marginTop="20dp"
         android:padding="8dp"
@@ -116,31 +108,7 @@
         android:textSize="16sp"
         app:cornerRadius="15dp" />
 
-    <TextView
-        android:id="@+id/txtBreaker"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/btnLogin"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="20dp"
-        android:padding="2dp"
-        android:text="------------------------------ or ---------------------------"
-        android:textSize="16sp" />
 
-
-    <ImageButton
-
-        android:id="@+id/btn_LoginByGmail"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/txtBreaker"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="2dp"
-        android:contentDescription="Google Linking"
-        android:src="@drawable/btn_google"
-        android:textAllCaps="false"
-        android:textColor="@color/black"
-        app:backgroundTint="@color/white" />
 
 
 
