--- a/app/src/main/res/drawable/filled_button_background.xml
+++ b/app/src/main/res/drawable/filled_button_background.xml
@@ -3,10 +3,10 @@
     android:shape="rectangle">
 
     <corners android:radius="16dp" />
-    <solid android:color="@color/white">
+    <solid android:color="@color/black">
 
     </solid>
     <stroke
         android:width="1dp"
-        android:color="@color/grey_10" />
+        android:color="@color/black" />
 </shape>
