--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,38 +6,37 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="wrap_content"
-    android:padding="50dp"
+    android:paddingTop="64dp"
+    android:paddingHorizontal="48dp"
     tools:context=".Login">
-
 
 
     <ImageView
         android:id="@+id/imgLogo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/applogo3d1"
-        android:layout_centerHorizontal="true"/>
+        android:layout_width="180dp"
+        android:layout_height="180dp"
+        android:layout_centerHorizontal="true"
+        app:srcCompat="@drawable/applogo3d1" />
 
     <TextView
         android:id="@+id/txtTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="5dp"
-        android:text="Welcome Back!"
-        android:textColor="@color/black"
         android:layout_below="@id/imgLogo"
-        tools:layout_editor_absoluteX="28dp"
-        tools:layout_editor_absoluteY="59dp"
         android:layout_centerHorizontal="true"
+        android:paddingTop="16dp"
+        android:text="Welcome Back!"
         android:textAppearance="@style/TextAppearance.AppCompat.Title"
-        />
+        android:textColor="@color/grey_100"
+        tools:layout_editor_absoluteX="28dp"
+        tools:layout_editor_absoluteY="59dp" />
     <TextView
         android:id="@+id/txtSubTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="5dp"
+        android:paddingTop="8dp"
         android:text="Let’s continue the journey."
-        android:textColor="@color/grey"
+        android:textColor="@color/grey_60"
         android:layout_below="@id/txtTitle"
         tools:layout_editor_absoluteX="28dp"
         tools:layout_editor_absoluteY="59dp"
@@ -46,19 +45,17 @@
         />
 
 
-
     <TextView
         android:id="@+id/textView_Email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/txtSubTitle"
         android:padding="5dp"
         android:text="Email"
         android:textColor="@color/black"
         android:textSize="16sp"
-        android:layout_below="@id/txtSubTitle"
         tools:layout_editor_absoluteX="28dp"
-        tools:layout_editor_absoluteY="59dp"
-        />
+        tools:layout_editor_absoluteY="80dp" />
 
     <EditText
         android:id="@+id/editTextTextEmailAddress"
@@ -69,7 +66,8 @@
         android:ems="10"
         android:hint="johndoe@example.com "
         android:inputType="textEmailAddress"
-        android:padding="10dp" />
+        android:paddingHorizontal="24dp"
+        android:paddingVertical="18dp" />
 
     <TextView
         android:id="@+id/textView_email"
@@ -90,7 +88,8 @@
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
-        android:padding="10dp" />
+        android:paddingHorizontal="24dp"
+        android:paddingVertical="18dp" />
 
     <TextView
         android:id="@+id/textView_forgotPassword"
@@ -109,38 +108,81 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/textView_forgotPassword"
         android:layout_centerInParent="true"
-        android:layout_marginTop="20dp"
-        android:padding="8dp"
+        android:layout_marginTop="32dp"
+        android:background="@drawable/outlined_button_background"
+        android:paddingVertical="16dp"
         android:text="Login"
         android:textAllCaps="false"
         android:textSize="16sp"
-        app:cornerRadius="15dp" />
+        app:cornerRadius="16dp" />
 
-    <TextView
+    <RelativeLayout
         android:id="@+id/txtBreaker"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/btnLogin"
-        android:layout_centerInParent="true"
         android:layout_marginTop="20dp"
-        android:padding="2dp"
-        android:text="------------------------------ or ---------------------------"
-        android:textSize="16sp" />
+        >
+        <View
+            android:layout_centerVertical="true"
+            android:id="@+id/leftLine"
+            android:layout_toStartOf="@+id/or"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/grey_10" />
+
+        <TextView
+            android:id="@+id/or"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:paddingHorizontal="16dp"
+            android:text="or"
+            android:textSize="16sp" />
+        <View
+            android:layout_centerVertical="true"
+            android:id="@+id/rightLine"
+            android:layout_toEndOf="@id/or"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/grey_10"/>
+
+    </RelativeLayout>
 
 
-    <ImageButton
+<!--    <Button-->
+<!--        android:id="@+id/btn_LoginByGmail"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_below="@id/txtBreaker"-->
+<!--        android:layout_centerInParent="true"-->
+<!--        android:layout_marginVertical="32dp"-->
+<!--        android:background="@drawable/outlined_button_background"-->
+<!--        android:drawableLeft="@drawable/ic_flat_color_icons_google"-->
+<!--        android:paddingVertical="16dp"-->
+<!--        android:text="Continue with Google"-->
+<!--        android:textAllCaps="false"-->
+<!--        android:textSize="16sp" />-->
+
+    <com.google.android.material.button.MaterialButton
 
         android:id="@+id/btn_LoginByGmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/txtBreaker"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="2dp"
-        android:contentDescription="Google Linking"
-        android:src="@drawable/btn_google"
+        android:layout_marginVertical="32dp"
+        android:paddingVertical="16dp"
+        app:icon="@drawable/ic_flat_color_icons_google"
+        app:iconGravity="textStart"
+        android:text="Continue with Google"
         android:textAllCaps="false"
         android:textColor="@color/black"
-        app:backgroundTint="@color/white" />
+        android:textSize="16sp"
+        android:background="@color/white"
+        app:cornerRadius="16dp"
+        app:strokeColor="@color/grey_10"
+        app:strokeWidth="1dp"
+        />
 
 
 
