--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,7 @@
         />
 
 //Login Button
+
     <com.google.android.material.button.MaterialButton
 
         android:id="@+id/btnlogin"
@@ -55,6 +56,7 @@
         app:strokeWidth="1dp" />
 
     //Register Button
+
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnregister"
         android:layout_width="wrap_content"
@@ -63,11 +65,11 @@
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="45dp"
         android:layout_marginBottom="65dp"
+        android:onClick="register"
         android:text="Register"
         android:textAllCaps="false"
         android:textSize="15sp"
-        app:cornerRadius="15dp"
-        android:onClick="register"/>
+        app:cornerRadius="15dp" />
 
 
 </RelativeLayout>
