--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -22,15 +22,14 @@
         android:id="@+id/txtTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/imgLogo"
+        android:layout_centerHorizontal="true"
         android:padding="5dp"
         android:text="Welcome to Utilia!!"
-        android:textColor="@color/black"
-        android:layout_below="@id/imgLogo"
-        tools:layout_editor_absoluteX="28dp"
-        tools:layout_editor_absoluteY="59dp"
-        android:layout_centerHorizontal="true"
         android:textAppearance="@style/TextAppearance.AppCompat.Title"
-        />
+        android:textColor="@color/black"
+        tools:layout_editor_absoluteX="28dp"
+        tools:layout_editor_absoluteY="59dp" />
     <TextView
         android:id="@+id/txtSubTitle"
         android:layout_width="wrap_content"
@@ -93,6 +92,7 @@
         android:padding="10dp" />
 
     //creating a linear layout
+
     <LinearLayout
         android:id="@+id/linearLayout1"
         android:layout_width="match_parent"
@@ -104,16 +104,15 @@
             android:id="@+id/textView_accept"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="I accept the "
-            />
+            android:text="I accept the " />
+
         <TextView
             android:id="@+id/txtCondition"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Terms and Conditions."
-            android:textColor="@color/yellow"
             android:layout_toRightOf="@id/textView_accept"
-            />
+            android:text="Terms and Conditions."
+            android:textColor="@color/yellow" />
     </LinearLayout>
 
 //creating Login button
