added intents and element id change material button to image button

--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -83,7 +83,8 @@
         android:text="Submit"
         android:textAllCaps="false"
         android:textSize="16sp"
-        app:cornerRadius="15dp" />
+        app:cornerRadius="15dp"
+        android:onClick="reset_Password"/>
 
 
 
