--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".MainActivity"
     android:background="@color/yellow">
 
-    //Slider Image Viewer
+
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/sceensot_slider"
         android:layout_width="match_parent"
@@ -16,7 +16,7 @@
 
     </androidx.viewpager.widget.ViewPager>
 
-    //Indicator
+    //for Indicator
     <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
 
         android:id="@+id/dots_indicator"
@@ -45,7 +45,6 @@
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="265dp"
         android:layout_marginBottom="65dp"
-        android:onClick="login"
         android:text="Login"
         android:textAllCaps="false"
         android:textColor="@color/black"
@@ -53,7 +52,8 @@
         app:backgroundTint="#e3d134"
         app:cornerRadius="15dp"
         app:strokeColor="@color/black"
-        app:strokeWidth="1dp" />
+        app:strokeWidth="1dp"
+        android:onClick="login"/>
 
     //Register Button
 
@@ -65,11 +65,22 @@
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="45dp"
         android:layout_marginBottom="65dp"
-        android:onClick="register"
         android:text="Register"
         android:textAllCaps="false"
         android:textSize="15sp"
-        app:cornerRadius="15dp" />
+        app:cornerRadius="15dp"
+        android:onClick="register"/>
+
+<!--    <ProgressBar-->
+<!--        android:id="@+id/progressBar"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        style="?android:attr/progressBarStyleLarge"-->
+<!--        android:layout_centerInParent="true"-->
+<!--        android:visibility="visible"-->
+<!--        tools:ignore="MissingConstraints"-->
+
+<!--        />-->
 
 
 </RelativeLayout>
