--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,160 +1,191 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/bottom_sheet_layout"
-    android:layout_width="match_parent"
-    android:orientation="vertical"
-    android:layout_height="wrap_content"
-    android:padding="50dp"
-    tools:context=".Register">
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
 
 
+    <RelativeLayout
 
-    <ImageView
-        android:id="@+id/imgLogo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/applogo3d1"
-        android:layout_centerHorizontal="true"/>
-
-    <TextView
-        android:id="@+id/txtTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/imgLogo"
-        android:layout_centerHorizontal="true"
-        android:padding="5dp"
-        android:text="Welcome to Utilia!!"
-        android:textAppearance="@style/TextAppearance.AppCompat.Title"
-        android:textColor="@color/black"
-        tools:layout_editor_absoluteX="28dp"
-        tools:layout_editor_absoluteY="59dp" />
-    <TextView
-        android:id="@+id/txtSubTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="5dp"
-        android:text="Let’s create your account"
-        android:textColor="@color/grey"
-        android:layout_below="@id/txtTitle"
-        tools:layout_editor_absoluteX="28dp"
-        tools:layout_editor_absoluteY="59dp"
-        android:layout_centerHorizontal="true"
-        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
-        />
-
-
-
-    <TextView
-        android:id="@+id/textView_Email"
+        android:id="@+id/bottom_sheet_layout"
         android:layout_width="match_parent"
+        android:orientation="vertical"
         android:layout_height="wrap_content"
-        android:padding="5dp"
-        android:text="Email"
-        android:textColor="@color/black"
-        android:textSize="16sp"
-        android:layout_below="@id/txtSubTitle"
-        tools:layout_editor_absoluteX="28dp"
-        tools:layout_editor_absoluteY="59dp"
-        />
+        android:padding="50dp"
+        tools:context=".Register">
 
-    <EditText
-        android:id="@+id/editTextTextEmailAddress"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/textView_Email"
-        android:background="@drawable/shape_border_and_background"
-        android:ems="10"
-        android:hint="johndoe@example.com "
-        android:inputType="textEmailAddress"
-        android:padding="10dp" />
 
-    <TextView
-        android:id="@+id/textView_email"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/editTextTextEmailAddress"
-        android:padding="5dp"
-        android:text="Password"
-        android:textColor="@color/black"
-        android:textSize="16sp" />
 
-    <EditText
-        android:id="@+id/editTextPassword"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/textView_email"
-        android:background="@drawable/shape_border_and_background"
-        android:ems="10"
-        android:hint="Password"
-        android:inputType="textPassword"
-        android:padding="10dp" />
-
-    //creating a linear layout
-
-    <LinearLayout
-        android:id="@+id/linearLayout1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/editTextPassword"
-        android:orientation="horizontal">
-
-        <RadioButton
-            android:id="@+id/textView_accept"
+        <ImageView
+            android:id="@+id/imgLogoRegister"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="I accept the " />
+            app:srcCompat="@drawable/applogo3d1"
+            android:layout_centerHorizontal="true"/>
 
         <TextView
-            android:id="@+id/txtCondition"
+            android:id="@+id/txtTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/textView_accept"
-            android:text="Terms and Conditions."
-            android:textColor="@color/yellow" />
-    </LinearLayout>
-
-//creating Login button
-    <Button
-        android:id="@+id/btnLogin"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/linearLayout1"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="10dp"
-        android:padding="8dp"
-        android:text="Login"
-        android:textAllCaps="false"
-        android:textSize="16sp"
-        app:cornerRadius="15dp" />
-
-    <TextView
-        android:id="@+id/txtBreaker"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/btnLogin"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="20dp"
-        android:padding="2dp"
-        android:text="------------------------------ or ---------------------------"
-        android:textSize="16sp" />
-
-
-    <ImageButton
-
-        android:id="@+id/btn_LoginByGmail"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/txtBreaker"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="2dp"
-        android:contentDescription="Google Linking"
-        android:src="@drawable/btn_google"
-        android:textAllCaps="false"
-        android:textColor="@color/black"
-        app:backgroundTint="@color/white" />
+            android:layout_below="@id/imgLogoRegister"
+            android:layout_centerHorizontal="true"
+            android:padding="5dp"
+            android:text="Welcome to Utilia!!"
+            android:textAppearance="@style/TextAppearance.AppCompat.Title"
+            android:textColor="@color/black"
+            tools:layout_editor_absoluteX="28dp"
+            tools:layout_editor_absoluteY="59dp" />
+        <TextView
+            android:id="@+id/txtSubTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:text="Let’s create your account"
+            android:textColor="@color/grey"
+            android:layout_below="@id/txtTitle"
+            tools:layout_editor_absoluteX="28dp"
+            tools:layout_editor_absoluteY="59dp"
+            android:layout_centerHorizontal="true"
+            android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
+            />
 
 
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/textView_Email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:text="Email"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:layout_below="@id/txtSubTitle"
+            tools:layout_editor_absoluteX="28dp"
+            tools:layout_editor_absoluteY="59dp"
+            />
+
+        <EditText
+            android:id="@+id/editTextEmailAddressRegister"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/textView_Email"
+            android:background="@drawable/shape_border_and_background"
+            android:ems="10"
+            android:hint="johndoe@example.com "
+            android:inputType="textEmailAddress"
+            android:padding="10dp" />
+
+        <TextView
+            android:id="@+id/textView_email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/editTextEmailAddressRegister"
+            android:padding="5dp"
+            android:text="Password"
+            android:textColor="@color/black"
+            android:textSize="16sp" />
+
+        <EditText
+            android:id="@+id/editTextPasswordRegister"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/textView_email"
+            android:background="@drawable/shape_border_and_background"
+            android:ems="10"
+            android:hint="Password"
+            android:inputType="textPassword"
+            android:padding="10dp" />
+
+        //creating a linear layout
+
+        <LinearLayout
+            android:id="@+id/linearLayout1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/editTextPasswordRegister"
+            android:orientation="horizontal">
+
+            <RadioButton
+                android:id="@+id/textView_accept"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="I accept the " />
+
+            <TextView
+                android:id="@+id/txtCondition"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@id/textView_accept"
+                android:text="Terms and Conditions."
+                android:textColor="@color/yellow" />
+        </LinearLayout>
+
+    //creating Login button
+
+        <Button
+            android:id="@+id/btnLoginRegister"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/linearLayout1"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="10dp"
+            android:padding="8dp"
+            android:text="Register"
+            android:textAllCaps="false"
+            android:textSize="16sp"
+            app:cornerRadius="15dp" />
+
+        <TextView
+            android:id="@+id/txtBreaker"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/btnLoginRegister"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="20dp"
+            android:padding="2dp"
+            android:text="------------------------------ or ---------------------------"
+            android:textSize="16sp" />
+
+
+        <ImageButton
+
+            android:id="@+id/btn_LoginByGmail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/txtBreaker"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="2dp"
+            android:contentDescription="Google Linking"
+            android:src="@drawable/btn_google"
+            android:textAllCaps="false"
+            android:textColor="@color/black"
+            app:backgroundTint="@color/white" />
+
+<!--        <ProgressBar-->
+<!--            android:id="@+id/progressBarInRegister"-->
+<!--            style="?android:attr/progressBarStyleLarge"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="122dp"-->
+<!--            android:layout_centerInParent="true"-->
+<!--            android:visibility="gone"-->
+<!--            tools:ignore="MissingConstraints"-->
+<!--            app:layout_constraintTop_toTopOf="parent"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintLeft_toLeftOf="parent"-->
+<!--            app:layout_constraintRight_toRightOf="parent"-->
+<!--            -->
+<!--            />-->
+
+
+
+
+
+
+
+    </RelativeLayout>
+
+
+</ScrollView>
