Made some changes in the UI.

--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -6,60 +6,58 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="wrap_content"
-    android:padding="50dp"
+    android:paddingHorizontal="50dp"
+    android:layout_gravity="center"
     tools:context=".Reset_Password">
-
 
 
     <ImageView
         android:id="@+id/imgUnlockLogo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/img_unlocked"
         android:layout_centerHorizontal="true"
-        android:paddingTop="60dp"/>
+        app:srcCompat="@drawable/img_unlocked" />
 
     <TextView
         android:id="@+id/txtTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="5dp"
-        android:text="Welcome Back!"
-        android:textColor="@color/black"
         android:layout_below="@id/imgUnlockLogo"
-        tools:layout_editor_absoluteX="28dp"
-        tools:layout_editor_absoluteY="59dp"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"
+        android:padding="5dp"
+        android:text="Reset Password"
         android:textAppearance="@style/TextAppearance.AppCompat.Title"
-        />
+        android:textColor="@color/black"
+        tools:layout_editor_absoluteX="28dp"
+        tools:layout_editor_absoluteY="59dp" />
+
     <TextView
         android:id="@+id/txtSubTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="5dp"
-        android:text="Let’s continue the journey."
-        android:textColor="@color/grey"
         android:layout_below="@id/txtTitle"
-        tools:layout_editor_absoluteX="28dp"
-        tools:layout_editor_absoluteY="59dp"
         android:layout_centerHorizontal="true"
+        android:paddingTop="8dp"
+        android:text="Welcome to your new life!"
         android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
-        />
-
+        android:textColor="@color/grey"
+        tools:layout_editor_absoluteX="28dp"
+        tools:layout_editor_absoluteY="59dp" />
 
 
     <TextView
         android:id="@+id/textView_Email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/txtSubTitle"
         android:padding="5dp"
         android:text="Email"
         android:textColor="@color/black"
         android:textSize="16sp"
-        android:layout_below="@id/txtSubTitle"
         tools:layout_editor_absoluteX="28dp"
         tools:layout_editor_absoluteY="59dp"
-        />
+        android:layout_marginTop="32dp"/>
 
     <EditText
         android:id="@+id/editTextTextEmailAddress"
@@ -70,7 +68,9 @@
         android:ems="10"
         android:hint="johndoe@example.com "
         android:inputType="textEmailAddress"
-        android:padding="10dp" />
+        android:maxWidth="340dp"
+        android:paddingHorizontal="24dp"
+        android:paddingVertical="18dp" />
 
     <TextView
         android:id="@+id/textView_email"
@@ -78,21 +78,23 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/editTextTextEmailAddress"
         android:padding="5dp"
-        android:text="Password"
+        android:text="New Password"
         android:textColor="@color/black"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        android:layout_marginTop="16dp"/>
 
     <EditText
         android:id="@+id/editTextTextPassword"
         android:layout_width="match_parent"
+        android:maxWidth="340dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/textView_email"
         android:background="@drawable/shape_border_and_background"
         android:ems="10"
-        android:hint="Password"
+        android:hint="New Password"
         android:inputType="textPassword"
-        android:padding="10dp" />
-
+        android:paddingHorizontal="24dp"
+        android:paddingVertical="18dp" />
 
 
     <Button
@@ -101,8 +103,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/editTextTextPassword"
         android:layout_centerInParent="true"
-        android:layout_marginTop="20dp"
-        android:padding="8dp"
+        android:layout_marginTop="32dp"
+        android:paddingHorizontal="24dp"
+        android:paddingVertical="18dp"
         android:text="Login"
         android:textAllCaps="false"
         android:textSize="16sp"
