--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="wrap_content"
-    android:paddingTop="64dp"
+    android:paddingTop="32dp"
     android:paddingHorizontal="48dp"
     tools:context=".Login">
 
@@ -123,12 +123,13 @@
         android:layout_below="@id/btnLogin"
         android:layout_marginTop="20dp"
         >
+
         <View
-            android:layout_centerVertical="true"
             android:id="@+id/leftLine"
-            android:layout_toStartOf="@+id/or"
             android:layout_width="match_parent"
             android:layout_height="1dp"
+            android:layout_centerVertical="true"
+            android:layout_toStartOf="@+id/or"
             android:background="@color/grey_10" />
 
         <TextView
@@ -150,39 +151,20 @@
     </RelativeLayout>
 
 
-<!--    <Button-->
-<!--        android:id="@+id/btn_LoginByGmail"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_below="@id/txtBreaker"-->
-<!--        android:layout_centerInParent="true"-->
-<!--        android:layout_marginVertical="32dp"-->
-<!--        android:background="@drawable/outlined_button_background"-->
-<!--        android:drawableLeft="@drawable/ic_flat_color_icons_google"-->
-<!--        android:paddingVertical="16dp"-->
-<!--        android:text="Continue with Google"-->
-<!--        android:textAllCaps="false"-->
-<!--        android:textSize="16sp" />-->
-
-    <com.google.android.material.button.MaterialButton
-
+    <Button
         android:id="@+id/btn_LoginByGmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/txtBreaker"
+        android:layout_centerInParent="true"
         android:layout_marginVertical="32dp"
+        android:backgroundTint="@color/white"
+        android:background="@drawable/outlined_button_background"
+        android:drawableLeft="@drawable/ic_flat_color_icons_google"
         android:paddingVertical="16dp"
-        app:icon="@drawable/ic_flat_color_icons_google"
-        app:iconGravity="textStart"
         android:text="Continue with Google"
         android:textAllCaps="false"
-        android:textColor="@color/black"
-        android:textSize="16sp"
-        android:background="@color/white"
-        app:cornerRadius="16dp"
-        app:strokeColor="@color/grey_10"
-        app:strokeWidth="1dp"
-        />
+        android:textSize="16sp" />
 
 
 
