--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="wrap_content"
-    android:padding="50dp"
+    android:paddingHorizontal="50dp"
+    android:layout_gravity="center"
     tools:context=".Register">
 
 
@@ -45,19 +46,18 @@
         />
 
 
-
     <TextView
         android:id="@+id/textView_Email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/txtSubTitle"
         android:padding="5dp"
         android:text="Email"
-        android:textColor="@color/black"
+        android:textColor="@color/grey_100"
         android:textSize="16sp"
-        android:layout_below="@id/txtSubTitle"
         tools:layout_editor_absoluteX="28dp"
         tools:layout_editor_absoluteY="59dp"
-        />
+        android:layout_marginTop="32dp"/>
 
     <EditText
         android:id="@+id/editTextTextEmailAddress"
@@ -68,7 +68,9 @@
         android:ems="10"
         android:hint="johndoe@example.com "
         android:inputType="textEmailAddress"
-        android:padding="10dp" />
+        android:maxWidth="340dp"
+        android:paddingHorizontal="24dp"
+        android:paddingVertical="18dp"/>
 
     <TextView
         android:id="@+id/textView_email"
@@ -77,7 +79,7 @@
         android:layout_below="@id/editTextTextEmailAddress"
         android:padding="5dp"
         android:text="Password"
-        android:textColor="@color/black"
+        android:textColor="@color/grey_100"
         android:textSize="16sp" />
 
     <EditText
@@ -89,7 +91,9 @@
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
-        android:padding="10dp" />
+        android:maxWidth="340dp"
+        android:paddingHorizontal="24dp"
+        android:paddingVertical="18dp" />
 
     //creating a linear layout
 
@@ -104,6 +108,8 @@
             android:id="@+id/textView_accept"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:buttonTint="@color/grey_10"
+            android:textColor="@color/grey_100"
             android:text="I accept the " />
 
         <TextView
@@ -116,29 +122,55 @@
     </LinearLayout>
 
 //creating Login button
+
     <Button
         android:id="@+id/btnLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/linearLayout1"
         android:layout_centerInParent="true"
-        android:layout_marginTop="10dp"
-        android:padding="8dp"
+        android:layout_marginTop="24dp"
+        android:maxWidth="340dp"
+        android:paddingHorizontal="24dp"
+        android:paddingVertical="18dp"
         android:text="Login"
         android:textAllCaps="false"
         android:textSize="16sp"
         app:cornerRadius="15dp" />
 
-    <TextView
+    <RelativeLayout
         android:id="@+id/txtBreaker"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/btnLogin"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="20dp"
-        android:padding="2dp"
-        android:text="------------------------------ or ---------------------------"
-        android:textSize="16sp" />
+        android:layout_marginVertical="24dp">
+
+        <View
+            android:id="@+id/leftLine"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_centerVertical="true"
+            android:layout_toStartOf="@+id/or"
+            android:background="@color/grey_10" />
+
+        <TextView
+            android:id="@+id/or"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:paddingHorizontal="16dp"
+            android:text="or"
+            android:textSize="16sp" />
+
+        <View
+            android:id="@+id/rightLine"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_centerVertical="true"
+            android:layout_toEndOf="@id/or"
+            android:background="@color/grey_10" />
+
+    </RelativeLayout>
 
 
     <ImageButton
