store the user registration email in firebase

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -113,7 +113,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="I accept the "
-                android:checked="false"/>
+                android:onClick="onClickButtonMethod"
+                android:checked="false"
+                />
 
             <TextView
                 android:id="@+id/txtCondition"
