--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -62,7 +62,7 @@
         />
 
     <EditText
-        android:id="@+id/editTextTextEmailAddress"
+        android:id="@+id/editTextEmailAddressToReset"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/textView_Email"
@@ -73,14 +73,14 @@
         android:padding="10dp" />
 
     <Button
-        android:id="@+id/btnLogin"
+        android:id="@+id/btnResetPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/editTextTextEmailAddress"
+        android:layout_below="@id/editTextEmailAddressToReset"
         android:layout_centerInParent="true"
         android:layout_marginTop="20dp"
         android:padding="8dp"
-        android:text="Submit"
+        android:text="Reset Password"
         android:textAllCaps="false"
         android:textSize="16sp"
         app:cornerRadius="15dp"
