intent to profile,home, and logout reset password and navigate to reset view for logging

--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -62,7 +62,7 @@
         />
 
     <EditText
-        android:id="@+id/editTextTextEmailAddress"
+        android:id="@+id/editTextmail_ResettedAddress"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/textView_Email"
@@ -76,14 +76,14 @@
         android:id="@+id/textView_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/editTextTextEmailAddress"
+        android:layout_below="@id/editTextmail_ResettedAddress"
         android:padding="5dp"
         android:text="Password"
         android:textColor="@color/black"
         android:textSize="16sp" />
 
     <EditText
-        android:id="@+id/editTextTextPassword"
+        android:id="@+id/editText_ResettedPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/textView_email"
@@ -96,10 +96,10 @@
 
 
     <Button
-        android:id="@+id/btnLogin"
+        android:id="@+id/btnLoginAfterReset"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/editTextTextPassword"
+        android:layout_below="@id/editText_ResettedPassword"
         android:layout_centerInParent="true"
         android:layout_marginTop="20dp"
         android:padding="8dp"
