--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -80,11 +80,11 @@
         android:layout_centerInParent="true"
         android:layout_marginTop="20dp"
         android:padding="8dp"
-        android:text="Reset Password"
+        android:text="Submit"
         android:textAllCaps="false"
         android:textSize="16sp"
         app:cornerRadius="15dp"
-        android:onClick="reset_Password"/>
+       />
 
 
 
